--- a/index.html
+++ b/index.html
@@ -7,6 +7,56 @@
   </head>
   
   <body>
-
+    <header>
+      <logo>Header Logo</logo>
+      <nav>
+        <ul>
+          <li><a href="">header link one</a></li>
+          <li><a href="">header link two</a></li>
+          <li><a href="">header link three</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section class="hero">
+      <div>
+        <div class="awesome">This website is awesome</div>
+        <p>This website has some subtext that goes here under the main title.  It's a smaller font and the color is lower contrast.</p>
+        <button class="button-top">Sign up</button>
+      </div>
+      <div class="image">this is a placeholder for an image</div>
+    </section>
+    <section class="info">
+      <div class="info-header">Some random information.</div>
+      <div class="info-boxes">
+        <div>
+          <div class="box"></div>
+          <div class="boxtext">this is some subtext under an illustration or image</div>
+        </div>
+        <div>
+          <div class="box"></div>
+          <div class="boxtext">this is some subtext under an illustration or image</div>
+        </div>
+        <div>
+          <div class="box"></div>
+          <div class="boxtext">this is some subtext under an illustration or image</div>
+        </div>
+        <div>
+          <div class="box"></div>
+          <div class="boxtext">this is some subtext under an illustration or image</div>
+        </div>
+      </div>
+    </section>
+    <section class="quote">
+      <div class="quote-text">This is an inspiring quote, or a testimonial from a customer.  Maybe it's just filling up space, or maybe people will actually read it.  Who knows?  All I know is that it looks nice.</div>
+      <div class="thor">-Thor, God of Thunder</div>
+    </section>
+    <section class="action">
+      <div>
+        <div class="calltoaction">Call to action!  It's time!</div>
+        <div>Sign up for our product by clicking that button right over there!</div>
+      </div>
+      <button class="button-bottom">Sign up</button>
+    </section>
+    <footer>Copyright (C) The Odin Project 2021</footer>
   </body>
 </html>
